# ScalES

./: .gitignore  CMakeLists.txt  Doxyfile  Installation  LICENSE  Makefile  README  README.md  build.sh  build_cpu.sh  build_cpu_linux.sh  build_gpu.sh  compile.sh  install.sh  linux.sh  make.inc  make.inc.colosseum  make.inc.hopper  make.inc.ranger  make.inc.shark  make.inc.tacc  setuptools  startgpu.sh  toolchain.cmake
PWDFTSUB/: README.md  env.sh  gcc_Release.h  install.sh  make.inc  run.sh
SRC/: ConvALBCube.cpp  Makefile  blas.cpp  blas.h  cblacs.h  commoninc.hpp  convcube.cpp  debug.hpp  domain.hpp  eigdg.cpp  eigdg.hpp  eigdg_A.cpp  eigdg_std.cpp  eigensolver.cpp  eigpw.cpp  eigpw.hpp  esdf.c  esdf.cpp  esdf.h  esdfutil.c  esdfutil.h  fourier.cpp  genmat.cpp  global.cpp  hamiltonian.cpp  interp.cpp  interp.hpp  lapack.cpp  lapack.h  lglnodes.cpp  lobpcg.cpp  lobpcg.hpp  mddg.cpp  mdpw.cpp  multi_vector.cpp  multi_vector.h  parallel.cpp  parallel.hpp  parvec.hpp  pcg_multi.cpp  (+24 more)
UTILITIES/: GenReduceCoord.m  HGH.m  HGHloconly.m  ReadCube.m  SplitGaussianCube.awk  aa.m  bb.m  bufvtot.m  bufwfn.m  checkinterval.m  convden.m  creadin.m  diagrho.m  drift.awk  egydiff.awk  gaussiancubehead.awk  gen1blkgrid.awk  gen1pmgrid.awk  gen1pmgrid.sh  gen2pmgrid.awk  gen2pmgrid.sh  gen_Al.m  gen_Na.m  gen_Si.m  gen_atompos.m  gen_dgdftin.m  gen_graphene.m  genpos_Bi2Se3.m  genpos_Na.m  genpos_Si.m  genpos_graphene.m  genqsub.awk  genqsub.sh  getindex3.m  grabcoord.awk  grabegy.awk  grabforce.awk  index1.m  index3.m  lgl.m  (+13 more)
cmake/: DGDFTBasicDepends.cmake  DGDFTCompileFlags.cmake  DGDFTTPLDepends.cmake  ScalESBasicDepends.cmake  ScalESCompileFlags.cmake  ScalESTPLDepends.cmake  dgdft-libxc.cmake  dgdft-linalg.cmake  scales-libxc.cmake  scales-linalg.cmake
config/: make.inc.brc  make.inc.colosseum  make.inc.cori_cpu  make.inc.dgx  make.inc.dgx.gpu  make.inc.edison  make.inc.elsi  make.inc.hopper  make.inc.intel  make.inc.linux  make.inc.linux.lin  make.inc.osx  make.inc.summit  toolchain.cmake.cori  toolchain.cmake.linux  toolchain.cmake.yi
cuda_include/: cuda_blas.hpp
deprecatedtests/: Makefile  ex1.cpp  ex10.cpp  ex11.cpp  ex12.cpp  ex13.cpp  ex14.cpp  ex15.cpp  ex16.cpp  ex17.cpp  ex18.cpp  ex19.cpp  ex2.cpp  ex20.cpp  ex21.cpp  ex22.cpp  ex23.cpp  ex24.cpp  ex25.cpp  ex26.cpp  ex27.cpp  ex28.cpp  ex29.cpp  ex3.cpp  ex30.cpp  ex31.cpp  ex32.cpp  ex33.cpp  ex34.cpp  ex35.cpp  ex36.cpp  ex37.cpp  ex38.cpp  ex39.cpp  ex4.cpp  ex40.cpp  ex41.cpp  ex42.cpp  ex43.cpp  ex44.cpp  (+10 more)
doc/: FAQ.rst  Makefile  PWDFT.doc  README  TODO.md  conf.py  deprecated_refactor2017.md  developer.tex  index.rst  index_bak.rst  inputdgdft.rst  inputpwdft.rst  install.rst  introduction.rst  mainfunction.md  mainpage.md  refactor2.md  refactor2020.rst  tutorial.rst
examples/: md.cpp  (+35 more)
src/: CMakeLists.txt  Makefile  axpby.cu  blas.cpp  cuSolver.cpp  cublas.cpp  cublas_wrappers.cu  cuda_api_wrappers.cu  cuda_blas.cpp  cuda_blas.cu  cuda_errors.cpp  cuda_memory_resource.cxx  cuda_scf_dg.cu  cuda_scf_dg.cxx  cuda_type_pimpl.hpp  cuda_type_wrappers.cu  cuda_utils.cu  cuda_wrapper.cu  cufft.cu  cusolver.cpp  eigensolver.cpp  esdf.cpp  fourier.cpp  global.cpp  hamiltonian.cpp  hamiltonian_dg.cpp  hamiltonian_dg_device.cpp  hamiltonian_dg_matrix.cpp  hamiltonian_dg_matrix_device.cpp  iondynamics.cpp  lapack.cpp  lobpcg++.cpp  lrtddft.cpp  magma.cpp  mpi_interf.cpp  periodtable.cpp  plobpcg++.cpp  scalapack.cpp  scales.h  scales.hpp  (+7 more)
src/common/: CMakeLists.txt  Makefile  block_distributor_decl.h  block_distributor_decl.hpp  block_distributor_factory.h  block_distributor_factory.hpp  block_distributor_impl.cpp  block_distributor_impl.h  block_distributor_impl.hpp  config.hpp.in  cu_numtns_decl.hpp  cufft.cu  domain.h  domain.hpp  environment.hpp  esdf.cpp  esdf.h  esdf.hpp  fourier.cpp  fourier.h  fourier.hpp  global.cpp  host_block_distributor.cpp  host_block_distributor.hpp  host_generic_block_distributor.h  host_generic_block_distributor.hpp  host_optpack_block_distributor.h  host_optpack_block_distributor.hpp  lapack.cpp  linalg_extensions.h  linalg_extensions.hpp  mpi_interf.cpp  mpi_interf.h  mpi_interf.hpp  nummat_decl.h  nummat_decl.hpp  nummat_impl.hpp  numtns_decl.h  numtns_decl.hpp  numtns_impl.hpp  (+19 more)
src/common/deprecated_linalg/: blas.cpp  blas.hpp  lapack.cpp  lapack.hpp
src/common/device/: Makefile  device_nummat_decl.h  device_nummat_decl.hpp  device_nummat_impl.hpp  device_numtns_decl.h  device_numtns_decl.hpp  device_numtns_impl.hpp  device_numvec_decl.h  device_numvec_decl.hpp  device_numvec_impl.hpp  device_utility.cpp  device_utility.h  device_utility.hpp
src/common/device/nvgpu/: Makefile  device_blas.cpp  device_blas.h  device_blas.hpp  device_error.cpp  device_error.hpp  device_fft.cpp  device_fft.h  device_fft.hpp  device_mpi_interf.cpp  device_mpi_interf.h  device_mpi_interf.hpp  device_solver.cpp  device_solver.h  device_solver.hpp  device_utils.cu  device_utils.h  magma.cpp  magma.h  magma.hpp
src/dg/: dgdft.cpp  scf_dg.cpp
src/dgdft/: dgdft.cpp  distvec_decl.hpp  distvec_impl.hpp  hamiltonian_dg.cpp  hamiltonian_dg.hpp  hamiltonian_dg_conversion.hpp  hamiltonian_dg_matrix.cpp  scf_dg.cpp  scf_dg.hpp  scfdg_upper_end_of_spectrum.hpp
src/matlab_utils/: HGH_PBE_soft.m  LDA_ONCV_psp.m  LDA_ONCV_psp_VLocal.m  PpData.m  gen_atompos.m  genpos_GaAs.m  genpos_graphene.m  plot_alblgl.m  plot_albuniform.m  plot_density.m  plot_pot.m  plot_wfnelem.m  plot_wfnext.m  si_ase.py  splinerad.m  upf2bin.m  upfread.m  xyz_to_dgdft.m
src/pwdft/: CMakeLists.txt  Makefile  domain.hpp  eigensolver.cpp  eigensolver.h  eigensolver.hpp  esdf.cpp  esdf.hpp  hamiltonian.cpp  hamiltonian.h  hamiltonian.hpp  iondynamics.cpp  iondynamics.h  iondynamics.hpp  periodtable.cpp  pwdft.cpp  pwdft.h  pwdft.hpp  scf.cpp  scf.h  scf.hpp  spinor.cpp  spinor.h  spinor.hpp
src/pwdft/device/: device_eigensolver.cpp  device_hamiltonian.cpp  device_spinor.cpp
src/tddft/: sgmres.cpp  sgmres.h  sgmres.hpp  td.cpp  td.h  td.hpp  tddft.cpp
src/tools/: alb2cube.cpp  den2cube.cpp  den2cubepw.cpp  diagonalize.cpp  lufact.cpp
(+363 files in other folders)
